Fix unclosed paths when intersecting two rectangular selections

It seems like Qt has a bug and leaves some edges open when intersecting
rectangles. So we should manually close all the subpath when something like
that happens.

BUG:408369